# 2D-equivariant-diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
equivariant_diffusion/: egnn.py  noise_schedule.py  straight_line_dataset.py
